--- a/app/src/main/res/values/settings_keys.xml
+++ b/app/src/main/res/values/settings_keys.xml
@@ -209,32 +209,25 @@
 
     <!-- THEMES -->
     <string name="theme_key">theme</string>
-    <string name="night_theme_key">night_theme</string>
     <string name="light_theme_key">light_theme</string>
     <string name="dark_theme_key">dark_theme</string>
     <string name="black_theme_key">black_theme</string>
-    <string name="auto_device_theme_key">auto_device_theme</string>
-    <string name="default_theme_value">@string/auto_device_theme_key</string>
-    <string name="default_night_theme_value">@string/dark_theme_key</string>
+    <string name="auto_dark_theme_key">auto_dark_for_night</string>
+    <string name="auto_black_theme_key">auto_black_for_night</string>
+    <string name="default_theme_value">@string/auto_dark_theme_key</string>
     <string-array name="theme_values_list">
         <item>@string/light_theme_key</item>
         <item>@string/dark_theme_key</item>
         <item>@string/black_theme_key</item>
-        <item>@string/auto_device_theme_key</item>
+        <item>@string/auto_dark_theme_key</item>
+        <item>@string/auto_black_theme_key</item>
     </string-array>
     <string-array name="theme_description_list">
         <item>@string/light_theme_title</item>
         <item>@string/dark_theme_title</item>
         <item>@string/black_theme_title</item>
-        <item>@string/auto_device_theme_title</item>
-    </string-array>
-    <string-array name="night_theme_values_list">
-        <item>@string/dark_theme_key</item>
-        <item>@string/black_theme_key</item>
-    </string-array>
-    <string-array name="night_theme_description_list">
-        <item>@string/dark_theme_title</item>
-        <item>@string/black_theme_title</item>
+        <item>@string/auto_device_theme_dark_for_night_title</item>
+        <item>@string/auto_device_theme_black_for_night_title</item>
     </string-array>
 
     <!-- Caption Size -->
